force-app/main/default/objects/Share_Relationship_Item__c/Share_Relationship_Item__c.object-meta.xml
<CustomObject>
    <label>共享关系行</label>
    <nameField>
        <displayFormat>SRI-{YYYYMMDD}-{0000000000}</displayFormat>
        <label>共享关系行编号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>共享关系行</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>