force-app/main/default/objects/Share_Relationship_Item__c/fields/External_Key_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Key_ID__c</fullName>
    <externalId>true</externalId>
    <label>*Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>