force-app/main/default/objects/Share_Relationship_Item__c/fields/Share_Relationship_ID__c.field-meta.xml
<CustomField>
    <fullName>Share_Relationship_ID__c</fullName>
    <label>共享关系记录Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>