force-app/main/default/objects/Share_Relationship_Item__c/fields/ShareItemId__c.field-meta.xml
<CustomField>
    <fullName>ShareItemId__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>共享对象数据的Id,与共享关系记录组成一对多关系</inlineHelpText>
    <label>共享子关系Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>