force-app/main/default/objects/Share_Relationship_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Share_Relationship_ID__c</columns>
    <columns>ShareItemId__c</columns>
    <columns>External_Key_ID__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>全部</label>
</ListView>